# appimage-appsfolder

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.py
res/: CMakeLists.txt  appimage-appsdir.desktop
res/share/: appimage-appsdir.desktop
src/: CMakeLists.txt  main.cpp
src/AppImage/: AppRun.sh  CMakeLists.txt  self-install.sh  self-uninstall.sh  settings.sh
src/appimageservices-interfaces/: CMakeLists.txt
src/base/: AbstractFileSystemWatcher.h  AppsDir.cpp  AppsDir.h  CMakeLists.txt  FileSystemWatcher.cpp  FileSystemWatcher.h
test/: AppsDirTests.cpp  CMakeLists.txt
test/test-base/: CMakeLists.txt  FakeFileSystemWatcher.cpp  FakeFileSystemWatcher.h  FakeLauncher.cpp  FakeLauncher.h
